--- a/news.html
+++ b/news.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>陈晓辉--新闻网站</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 
   <div class="navbar navbar-default navbar-fixed-top">
@@ -33,134 +36,159 @@
     </div>
   </div>
 
-<div style="margin-top:70px;" class="container">
-  <div class="col-md-8">
-    <div class="news-desc-title">
-      2年前他为教育事业和高圆圆分手，今成这般，高圆圆：我有一句MMP如鲠在喉
+  <div style="margin-top:70px;" class="container">
+    <div class="col-md-8">
+      <div class="news-desc-title">
+        2年前他为教育事业和高圆圆分手，今成这般，高圆圆：我有一句MMP如鲠在喉
+      </div>
+      <div class="news-desc">
+        25k阅读 • 35分之前发布
+        <div class="label label-default">教育</div>
+        <div class="label label-default">情感</div>
+      </div>
+      <div class="news-text">
+        <blockquote>
+          <p>
+            Possimus numquam saepe ad, minus non voluptatum a ut necessitatibus, nostrum et.
+            deleniti sit repudiandae.
+          </p>
+        </blockquote>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quasi facilis eos earum unde blanditiis est,
+          id accusamus molestiae recusandae fugit sapiente similique excepturi provident quos veritatis aperiam? Dolor,
+          sequi!</p>
+        <img src="img/2-4.jpg" alt="">
+        <p>Possimus numquam saepe ad, minus non! Vitae, aut doloribus excepturi impedit quidem dolore, minima fugit
+          provident, omnis deleniti voluptas rem maiores ea libero facere deserunt. Quaerat possimus, minus accusantium
+          dolorum!</p>
+        <p>Error, voluptatum a ut necessitatibus, nostrum et, natus tempore libero facilis nisi ipsum porro, velit quas
+          quae qui officiis labore impedit aspernatur voluptate blanditiis maiores? Optio repellat expedita ad debitis!</p>
+        <p>Omnis perferendis distinctio ullam id at delectus deleniti sit repudiandae. Esse ducimus sapiente in quod
+          cum earum ratione cumque. Nemo aspernatur earum perspiciatis nobis sit repellat quidem reprehenderit, nisi
+          culpa?</p>
+        <p>Sit, libero modi. Eius possimus praesentium blanditiis pariatur temporibus dolorum minus iusto, libero
+          ducimus. Unde quia, reprehenderit corporis, eaque facere illo ut, consequatur nesciunt vero quidem commodi
+          vel labore ipsa?</p>
+        <p>Labore nam molestiae a consequatur expedita alias qui nemo officiis quas voluptates doloremque quis, maiores
+          repellat, minima consequuntur incidunt eum laudantium omnis eos, voluptatem. Asperiores saepe enim unde
+          explicabo, quibusdam.</p>
+        <p>Dolor dolorum unde aut consectetur reiciendis eum laudantium. Aliquam obcaecati ex sapiente officia vitae,
+          reprehenderit, accusamus qui recusandae in assumenda! Magnam, voluptate! Minus quidem nihil nobis,
+          perferendis? Nam, repudiandae doloremque.</p>
+        <p>Doloremque dicta quos cumque totam suscipit dolor esse odio nulla, atque temporibus, velit et eaque nobis
+          alias laboriosam, eveniet minima itaque assumenda quo modi nisi libero exercitationem consequuntur! Deleniti,
+          sequi.</p>
+        <p>Tempore, cupiditate, perspiciatis. Odio cum voluptates facere ad rem laborum dolorem nisi pariatur quasi,
+          perspiciatis at, repellendus iure eos necessitatibus molestias enim inventore, fuga! Tempore sit animi
+          nesciunt veniam distinctio.</p>
+        <p>Quam dolorem, accusamus autem quibusdam iure excepturi amet pariatur voluptates, dolores ab, praesentium
+          ducimus esse dolore dolor! At enim, quod quam alias facere nisi aliquam incidunt necessitatibus est
+          voluptates cupiditate.</p>
+      </div>
     </div>
-    <div class="news-desc">
-      25k阅读 • 35分之前发布
-      <div class="label label-default">教育</div>
-      <div class="label label-default">情感</div>
-    </div>
-    <div class="news-text">
-      <blockquote>
-        <p>
-          Possimus numquam saepe ad, minus non voluptatum a ut necessitatibus, nostrum et.
-           deleniti sit repudiandae.
-        </p>
-      </blockquote>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quasi facilis eos earum unde blanditiis est, id accusamus molestiae recusandae fugit sapiente similique excepturi provident quos veritatis aperiam? Dolor, sequi!</p>
-      <img src="img/2-4.jpg" alt="">
-      <p>Possimus numquam saepe ad, minus non! Vitae, aut doloribus excepturi impedit quidem dolore, minima fugit provident, omnis deleniti voluptas rem maiores ea libero facere deserunt. Quaerat possimus, minus accusantium dolorum!</p>
-      <p>Error, voluptatum a ut necessitatibus, nostrum et, natus tempore libero facilis nisi ipsum porro, velit quas quae qui officiis labore impedit aspernatur voluptate blanditiis maiores? Optio repellat expedita ad debitis!</p>
-      <p>Omnis perferendis distinctio ullam id at delectus deleniti sit repudiandae. Esse ducimus sapiente in quod cum earum ratione cumque. Nemo aspernatur earum perspiciatis nobis sit repellat quidem reprehenderit, nisi culpa?</p>
-      <p>Sit, libero modi. Eius possimus praesentium blanditiis pariatur temporibus dolorum minus iusto, libero ducimus. Unde quia, reprehenderit corporis, eaque facere illo ut, consequatur nesciunt vero quidem commodi vel labore ipsa?</p>
-      <p>Labore nam molestiae a consequatur expedita alias qui nemo officiis quas voluptates doloremque quis, maiores repellat, minima consequuntur incidunt eum laudantium omnis eos, voluptatem. Asperiores saepe enim unde explicabo, quibusdam.</p>
-      <p>Dolor dolorum unde aut consectetur reiciendis eum laudantium. Aliquam obcaecati ex sapiente officia vitae, reprehenderit, accusamus qui recusandae in assumenda! Magnam, voluptate! Minus quidem nihil nobis, perferendis? Nam, repudiandae doloremque.</p>
-      <p>Doloremque dicta quos cumque totam suscipit dolor esse odio nulla, atque temporibus, velit et eaque nobis alias laboriosam, eveniet minima itaque assumenda quo modi nisi libero exercitationem consequuntur! Deleniti, sequi.</p>
-      <p>Tempore, cupiditate, perspiciatis. Odio cum voluptates facere ad rem laborum dolorem nisi pariatur quasi, perspiciatis at, repellendus iure eos necessitatibus molestias enim inventore, fuga! Tempore sit animi nesciunt veniam distinctio.</p>
-      <p>Quam dolorem, accusamus autem quibusdam iure excepturi amet pariatur voluptates, dolores ab, praesentium ducimus esse dolore dolor! At enim, quod quam alias facere nisi aliquam incidunt necessitatibus est voluptates cupiditate.</p>
+    <div class="col-md-4">
+      <div class="sider-bar-card">
+        <div class="sider-bar-card-title">相关推荐</div>
+        <div class="list">
+          <div class="item clearfix">
+            <div class="col-md-5">
+              <img src="https://dummyimage.com/1000x700/666/ccc">
+            </div>
+            <div class="col-md-7">
+              <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
+              <div class="desc clear-left-pd">15k阅读 1k评论</div>
+            </div>
+          </div>
+
+          <div class="item clearfix">
+            <div class="col-md-5">
+              <img src="https://dummyimage.com/1000x700/666/ccc">
+            </div>
+            <div class="col-md-7">
+              <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
+              <div class="desc clear-left-pd">15k阅读 1k评论</div>
+            </div>
+          </div>
+
+          <div class="item clearfix">
+            <div class="col-md-5">
+              <img src="https://dummyimage.com/1000x700/666/ccc">
+            </div>
+            <div class="col-md-7">
+              <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
+              <div class="desc clear-left-pd">15k阅读 1k评论</div>
+            </div>
+          </div>
+
+          <div class="item clearfix">
+            <div class="col-md-5">
+              <img src="https://dummyimage.com/1000x700/666/ccc">
+            </div>
+            <div class="col-md-7">
+              <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
+              <div class="desc clear-left-pd">15k阅读 1k评论</div>
+            </div>
+          </div>
+
+          <div class="item clearfix">
+            <div class="col-md-5">
+              <img src="https://dummyimage.com/1000x700/666/ccc">
+            </div>
+            <div class="col-md-7">
+              <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
+              <div class="desc clear-left-pd">15k阅读 1k评论</div>
+            </div>
+          </div>
+
+          <div class="item clearfix">
+            <div class="col-md-5">
+              <img src="https://dummyimage.com/1000x700/666/ccc">
+            </div>
+            <div class="col-md-7">
+              <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
+              <div class="desc clear-left-pd">15k阅读 1k评论</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="sider-bar-card">
+        <div class="sider-bar-card-title">
+          24小时热闻
+        </div>
+        <div class="list">
+          <div class="item">
+            <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua.</div>
+            <div class="desc">15K阅读 1K评论</div>
+          </div>
+          <div class="item">
+            <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua.</div>
+            <div class="desc">15K阅读 1K评论</div>
+          </div>
+          <div class="item">
+            <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua.</div>
+            <div class="desc">15K阅读 1K评论</div>
+          </div>
+          <div class="item">
+            <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua.</div>
+            <div class="desc">15K阅读 1K评论</div>
+          </div>
+          <div class="item">
+            <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua.</div>
+            <div class="desc">15K阅读 1K评论</div>
+          </div>
+        </div>
+
+      </div>
+
     </div>
   </div>
-  <div class="col-md-4">
-    <div class="sider-bar-card">
-      <div class="sider-bar-card-title">相关推荐</div>
-      <div class="list">
-        <div class="item clearfix">
-          <div class="col-md-5">
-            <img src="https://dummyimage.com/1000x700/666/ccc">
-          </div>
-          <div class="col-md-7">
-            <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
-            <div class="desc clear-left-pd">15k阅读 1k评论</div>
-          </div>
-        </div>
-
-        <div class="item clearfix">
-          <div class="col-md-5">
-            <img src="https://dummyimage.com/1000x700/666/ccc">
-          </div>
-          <div class="col-md-7">
-            <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
-            <div class="desc clear-left-pd">15k阅读 1k评论</div>
-          </div>
-        </div>
-
-        <div class="item clearfix">
-          <div class="col-md-5">
-            <img src="https://dummyimage.com/1000x700/666/ccc">
-          </div>
-          <div class="col-md-7">
-            <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
-            <div class="desc clear-left-pd">15k阅读 1k评论</div>
-          </div>
-        </div>
-
-        <div class="item clearfix">
-          <div class="col-md-5">
-            <img src="https://dummyimage.com/1000x700/666/ccc">
-          </div>
-          <div class="col-md-7">
-            <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
-            <div class="desc clear-left-pd">15k阅读 1k评论</div>
-          </div>
-        </div>
-
-        <div class="item clearfix">
-          <div class="col-md-5">
-            <img src="https://dummyimage.com/1000x700/666/ccc">
-          </div>
-          <div class="col-md-7">
-            <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
-            <div class="desc clear-left-pd">15k阅读 1k评论</div>
-          </div>
-        </div>
-
-        <div class="item clearfix">
-          <div class="col-md-5">
-            <img src="https://dummyimage.com/1000x700/666/ccc">
-          </div>
-          <div class="col-md-7">
-            <div class="title clear-left-pd">Quam dolorem, accusamus autem suscipit dolor esse.</div>
-            <div class="desc clear-left-pd">15k阅读 1k评论</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
-    <div class="sider-bar-card">
-      <div class="sider-bar-card-title">
-        24小时热闻
-      </div>
-      <div class="list">
-        <div class="item">
-          <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          <div class="desc">15K阅读  1K评论</div>
-        </div>
-        <div class="item">
-          <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          <div class="desc">15K阅读  1K评论</div>
-        </div>
-        <div class="item">
-          <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          <div class="desc">15K阅读  1K评论</div>
-        </div>
-        <div class="item">
-          <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          <div class="desc">15K阅读  1K评论</div>
-        </div>
-        <div class="item">
-          <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-          <div class="desc">15K阅读  1K评论</div>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-</div>
 </body>
+
 </html>
