--- a/signup.html
+++ b/signup.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>陈晓辉--新闻网站</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 
   <div class="navbar navbar-default navbar-fixed-top">
@@ -33,40 +36,41 @@
     </div>
   </div>
 
-<div style="margin-top:70px;" class="container max">
-  <h1>注册
-    <small>没有账号？<a href="signup.html">注册</a></small>
-  </h1>
-  <form>
-    <div class="form-group">
-      <label>手机</label>
-      <input type="text" class="form-control">
-    </div>
-    <div class="form-group">
-      <label>验证码</label>
-      <div class="input-group">
+  <div style="margin-top:70px;" class="container max">
+    <h1>注册
+      <small>没有账号？<a href="signup.html">注册</a></small>
+    </h1>
+    <form>
+      <div class="form-group">
+        <label>手机</label>
         <input type="text" class="form-control">
-        <div class="input-group-btn">
-          <div class="btn btn-default">获取验证码</div>
+      </div>
+      <div class="form-group">
+        <label>验证码</label>
+        <div class="input-group">
+          <input type="text" class="form-control">
+          <div class="input-group-btn">
+            <div class="btn btn-default">获取验证码</div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label>密码</label>
-      <input type="password" class="form-control">
-    </div>
-    <div class="form-group">
-      <button class="btn btn-primary btn-block" type="submit">注册</button>
-    </div>
-    <div class="form-group">
-      注册拴蛋头条即代表您同意<a href="#">拴蛋头条服务条款</a>
-    </div>
-  </form>
-</div>
+      <div class="form-group">
+        <label>密码</label>
+        <input type="password" class="form-control">
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary btn-block" type="submit">注册</button>
+      </div>
+      <div class="form-group">
+        注册拴蛋头条即代表您同意<a href="#">拴蛋头条服务条款</a>
+      </div>
+    </form>
+  </div>
 
-<div class="footer">
-  © 2018 学习记录 中国互联网学习中心哈ICP证1401号ICP证1401号ICP证1401号
-</div>
+  <div class="footer">
+    © 2018 学习记录 中国互联网学习中心哈ICP证1401号ICP证1401号ICP证1401号
+  </div>
 
 </body>
+
 </html>
